# sam-annotator

./: .gitignore  annotate.py  annotate_video.py  inspect_annotations.py  pyproject.toml
